--- a/bank-acc/account.common/account.common/pom.xml
+++ b/bank-acc/account.common/account.common/pom.xml
@@ -35,7 +35,13 @@
 		<dependency>
 			<groupId>com.bank</groupId>
 			<artifactId>cqrs.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.bank</groupId>
+			<artifactId>cqrs.core</artifactId>
+			<version>1.0.0</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
